# django-vidar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  docker-compose.yml  docker-entrypoint.sh  dockerfile  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt  tox.ini
.github/workflows/: build-demo-image.yml  demo-builder.yml  demo.yml  django-vidar-tests.yml  django.yml  new-version-tags.yml  pushed-master.yml  pushed-new-tag.yml  run-django-tests.yml  tests.yml
example/: auth_backends.py  celery.py  settings.py  urls.py
exampleapp/: models.py  urls.py  views.py
exampleapp/management/commands/: init_example_users.py
exampleapp/migrations/: 0001_initial.py  0002_testmodel.py
exampleapp/templates/exampleapp/: testmodel_list.html
requirements/: core.txt  development.txt  docker.txt  tox.txt
tests/: test_functions.py  test_general.py  test_helpers.py  test_mixins.py  test_models.py  test_services.py  test_tasks.py  test_tasks2.py  test_templatetags.py  test_utils.py  test_utils_helpers.py  test_views.py
tests/fixtures/: channel_thumbnails.json
tests/tasks/: test_download.py  test_tasks.py  test_tasks2.py
tests/views/: test_channels.py  test_general.py  test_mixins.py  test_playlists.py  test_videos.py
vidar/: __init__.py  admin.py  app_settings.py  apps.py  exceptions.py  forms.py  interactor.py  json_encoders.py  mixins.py  models.py  oneoffs.py  pagination.py  renamers.py  signals.py  storages.py  tasks.py  template_contexts.py  urls.py  utils.py  views.py
vidar/helpers/: __init__.py  celery_helpers.py  channel_helpers.py  extrafile_helpers.py  file_helpers.py  model_helpers.py  statistics_helpers.py  video_helpers.py
vidar/migrations/: 0001_initial.py  0002_channel_needs_cookies_video_needs_cookies.py  0003_alter_highlight_options.py  0004_playlist_next_playlist.py  0005_playlist_directory_schema_playlist_filename_schema.py
vidar/services/: channel_services.py  crontab_services.py  image_services.py  notification_services.py  playlist_services.py  redis_services.py  schema_services.py  video_services.py  ytdlp_services.py
vidar/templatetags/: crontab_links.py  pagination_helpers.py  playlist_tools.py  vidar_utils.py  video_tools.py
vidar/tests/: cookies.txt  dlp_formats.json  dlp_response.json  test_functions.py  test_general.py  test_helpers.py  test_mixins.py  test_models.py  test_services.py  test_templatetags.py  test_utils_helpers.py  test_views.py  tests_fixture.json
(+59 files in other folders)
